--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,5 +1,34 @@
 <footer class="footer">
 	<div class="footer__content _container">
+		<div class="footer__items">
+			<div class="footer__item">
+				<a class="logo" href="#">
+					<img src="img/logo.png" alt="logo">
+					<div class="logo__text"><span>Электрик</span><br>Надежно. Безопасно</div>
+				</a>
 
+			</div>
+			<div class="footer__item">
+				<h3>Контактные данные</h3>
+				<div class="footer__text">
+					Н.Тагил и область<br>
+					Работаем круглосуточно:
+					<a href="tel:89057772030" class="header__item  _icon-tell"> 8 (905) 777-2030</a>
+					<br>Почта для заявок:
+					<a href="mailto:info@electrik.ru" class="header__item _icon-mail">info@electrik.ru</a>
+				</div>
+			</div>
+			<div class="footer__item">
+				<h3>Наши направления</h3>
+				<ul class="footer__links">
+					<li><a href="#" class="footer__link">Автоматы, выключатели, розетки</a></li>
+					<li><a href="#" class="footer__link">Аварийные срочные работы</a></li>
+					<li><a href="#" class="footer__link">Монтаж электропроводки</a></li>
+					<li><a href="#" class="footer__link">Освещение и подсветка</a></li>
+					<li><a href="#" class="footer__link">Подключение элекроприборов</a></li>
+					<li><a href="#" class="footer__link">Слаботочные системы</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </footer>
