--- a/#src/index.html
+++ b/#src/index.html
@@ -1,17 +1,146 @@
 <!DOCTYPE html>
 <html lang="ru">
-	@@include('_head.html',{
-	"title":"Главная"
-	})
-	<body>
-		<div class="wrapper">
-			@@include('_header.html',{})
-			<main class="page">
-				
-			</main>
-			@@include('_footer.html',{})
-		</div>
-		@@include('_popup.html',{})
-		@@include('_js.html',{})
-	</body>
+@@include('_head.html',{
+"title":"Главная"
+})
+
+<body>
+	<div class="wrapper">
+		@@include('_header.html',{})
+		<main class="page">
+			<div class="info__wrapper">
+				<div class="info__items  _container">
+					<div class="info__item">
+						<h3>Наши преимущества</h3>
+							<ul class="info__text">
+								<li>Срочный выезд</li>
+								<li>Аварийный выезд</li>
+								<li>Круглосуточно 24/7</li>
+								<li>Свердловская область</li>
+								<li>Возможен безналичный расчёт</li>
+							</ul>
+					</div>
+					<div class="info__item">
+						<h3>Цена и качество</h3>
+							<ul class="info__text">
+								<li>Работы выполняются опытными электриками</li>
+								<li>Лучшие цены в Н.Тагиле</li>
+								<li>Оплата только за выполненные<br>работы и услуги</li>
+							</ul>				
+					</div>
+					<div class="info__item">
+						<h3>Качественный сервис</h3>
+							<ul class="info__text">
+								<li>Закупка и доставка материала</li>
+								<li>Все работы и услуги "под ключ"</li>
+								<li>Выезжаем в СНГ</li>
+								<li>Обслуживаем компании</li>
+							</ul>
+					</div>
+				</div>
+			</div>
+			<div class="services__wrapper">
+				<div class="services _container">
+				<h2>Услуги электрика</h2>
+				<div class="services__title-text">
+					Ознакомьтесь с полным перечнем электромонтажных услуг
+				</div>
+				<div class="services__items">
+					<div class="services__item">
+						<h3>Автоматы, розетки, выключатели</h3>
+						<ul class="services__item-text">
+							<li>Сборка щита</li>
+							<li>Монтаж розеток</li>
+							<li>Монтаж выключателей</li>
+							<li>Ремонтные работы</li>
+						</ul>
+						<div class="btn-link">
+						<a href="#" class="glow-button">Позвонить</a>
+						<a href="#" class="services__item-link">Подробнее</a>
+						</div>
+					</div>
+					<div class="services__item">
+						<h3>Аварийные срочные работы</h3>
+						<ul class="services__item-text">
+							<li>Устранение неисправностей</li>
+							<li>Восстановление электроснабжения</li>
+							<li>Устранение замыкания</li>
+							<li>Аварийные работы</li>
+						</ul>
+						<div class="btn-link">
+							<a href="#" class="glow-button">Позвонить</a>
+							<a href="#" class="services__item-link">Подробнее</a>
+							</div>
+					</div>
+					<div class="services__item">
+						<h3>Монтаж и замена электропроводки</h3>
+						<ul class="services__item-text">
+							<li>Прокладка кабеля</li>
+							<li>Монтаж проводки с нуля</li>
+							<li>Подключение к электроснабжению</li>
+							<li>Монтаж электрики "под ключ"</li>
+						</ul>
+						<div class="btn-link">
+							<a href="#" class="glow-button">Позвонить</a>
+							<a href="#" class="services__item-link">Подробнее</a>
+							</div>
+					</div>
+					<div class="services__item">
+						<h3>Освещение и подсветка</h3>
+						<ul class="services__item-text">
+							<li>Монтаж внутреннего освещения</li>
+							<li>Монтаж наружного освещения</li>
+							<li>Монтаж люстр, бра, светильников</li>
+							<li>Установка подсветки</li>
+						</ul>
+						<div class="btn-link">
+							<a href="#" class="glow-button">Позвонить</a>
+							<a href="#" class="services__item-link">Подробнее</a>
+							</div>
+					</div>
+					<div class="services__item">
+						<h3>Подключение электроприборов</h3>
+						<ul class="services__item-text">
+							<li>Подключение духовых шкафов</li>
+							<li>Подключение бытовой техники</li>
+							<li>Подключение торгового оборудования</li>
+							<li>Подключение техники</li>
+						</ul>
+						<div class="btn-link">
+							<a href="#" class="glow-button">Позвонить</a>
+							<a href="#" class="services__item-link">Подробнее</a>
+							</div>
+					</div>
+					<div class="services__item">
+						<h3>Слаботочные<br> системы</h3>
+						<ul class="services__item-text">
+							<li>Прокладка интернета/тв/телефонии</li>
+							<li>Установка видеонаблюдения</li>
+							<li>Установка СКУД</li>
+							<li>Слаботочные подсветки</li>
+						</ul>
+						<div class="btn-link">
+							<a href="#" class="glow-button">Позвонить</a>
+							<a href="#" class="services__item-link">Подробнее</a>
+							</div>
+					</div>
+				</div>
+				</div>
+			</div>
+			<div class="call-block__wrapper">
+				<div class="call-block _container">
+					<h2>Уточните детали и закажите выезд электрика
+						8 (905) 777-2030</h2>
+					<div class="btn-link">
+						<a href="#" class="glow-button">Позвонить</a>
+					</div>
+				</div>
+			</div>
+		</main>
+		@@include('_footer.html',{})
+	</div>
+	@@include('_popup.html',{})
+	@@include('_js.html',{})
+</body>
+
 </html>
