complete all page

--- a/#src/index.html
+++ b/#src/index.html
@@ -56,7 +56,7 @@
 						</ul>
 						<div class="btn-link">
 						<a href="#" class="glow-button">Позвонить</a>
-						<a href="#" class="services__item-link">Подробнее</a>
+						<a href="./automaticSwitch.html" class="services__item-link">Подробнее</a>
 						</div>
 					</div>
 					<div class="services__item">
@@ -69,7 +69,7 @@
 						</ul>
 						<div class="btn-link">
 							<a href="#" class="glow-button">Позвонить</a>
-							<a href="#" class="services__item-link">Подробнее</a>
+							<a href="./emergencyWork.html" class="services__item-link">Подробнее</a>
 							</div>
 					</div>
 					<div class="services__item">
@@ -82,7 +82,7 @@
 						</ul>
 						<div class="btn-link">
 							<a href="#" class="glow-button">Позвонить</a>
-							<a href="#" class="services__item-link">Подробнее</a>
+							<a href="./mounting.html" class="services__item-link">Подробнее</a>
 							</div>
 					</div>
 					<div class="services__item">
@@ -95,7 +95,7 @@
 						</ul>
 						<div class="btn-link">
 							<a href="#" class="glow-button">Позвонить</a>
-							<a href="#" class="services__item-link">Подробнее</a>
+							<a href="./lighting.html" class="services__item-link">Подробнее</a>
 							</div>
 					</div>
 					<div class="services__item">
@@ -108,7 +108,7 @@
 						</ul>
 						<div class="btn-link">
 							<a href="#" class="glow-button">Позвонить</a>
-							<a href="#" class="services__item-link">Подробнее</a>
+							<a href="./connectingElectrical.html" class="services__item-link">Подробнее</a>
 							</div>
 					</div>
 					<div class="services__item">
@@ -121,21 +121,13 @@
 						</ul>
 						<div class="btn-link">
 							<a href="#" class="glow-button">Позвонить</a>
-							<a href="#" class="services__item-link">Подробнее</a>
+							<a href="./lowCurrentSystem.html" class="services__item-link">Подробнее</a>
 							</div>
 					</div>
 				</div>
 				</div>
 			</div>
-			<div class="call-block__wrapper">
-				<div class="call-block _container">
-					<h2>Уточните детали и закажите выезд электрика
-						8 (905) 777-2030</h2>
-					<div class="btn-link">
-						<a href="#" class="glow-button">Позвонить</a>
-					</div>
-				</div>
-			</div>
+			@@include('_callBlock.html',{})
 		</main>
 		@@include('_footer.html',{})
 	</div>
