--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -2,7 +2,7 @@
 	<div class="footer__content _container">
 		<div class="footer__items">
 			<div class="footer__item">
-				<a class="logo" href="#">
+				<a class="logo" href="./index.html">
 					<img src="img/logo.png" alt="logo">
 					<div class="logo__text"><span>Электрик</span><br>Надежно. Безопасно</div>
 				</a>
@@ -13,7 +13,7 @@
 				<div class="footer__text">
 					Н.Тагил и область<br>
 					Работаем круглосуточно:
-					<a href="tel:89057772030" class="header__item  _icon-tell"> 8 (905) 777-2030</a>
+				<a href="tel:89057772030" class="header__item  _icon-tell"> 8 (905) 777-2030</a>
 					<br>Почта для заявок:
 					<a href="mailto:info@electrik.ru" class="header__item _icon-mail">info@electrik.ru</a>
 				</div>
@@ -21,12 +21,12 @@
 			<div class="footer__item">
 				<h3>Наши направления</h3>
 				<ul class="footer__links">
-					<li><a href="#" class="footer__link">Автоматы, выключатели, розетки</a></li>
-					<li><a href="#" class="footer__link">Аварийные срочные работы</a></li>
-					<li><a href="#" class="footer__link">Монтаж электропроводки</a></li>
-					<li><a href="#" class="footer__link">Освещение и подсветка</a></li>
-					<li><a href="#" class="footer__link">Подключение элекроприборов</a></li>
-					<li><a href="#" class="footer__link">Слаботочные системы</a></li>
+					<li><a href="./automaticSwitch.html" class="footer__link">Автоматы, выключатели</a></li>
+					<li><a href="./emergencyWork.html" class="footer__link">Аварийные срочные работы</a></li>
+					<li><a href="./mounting.html" class="footer__link">Монтаж электропроводки</a></li>
+					<li><a href="./lighting.html" class="footer__link">Освещение и подсветка</a></li>
+					<li><a href="./connectingElectrical.html" class="footer__link">Подключение элекроприборов</a></li>
+					<li><a href="./lowCurrentSystem.html" class="footer__link">Слаботочные системы</a></li>
 				</ul>
 			</div>
 		</div>
