--- a/#src/_header.html
+++ b/#src/_header.html
@@ -2,17 +2,17 @@
 	<div class="header__wrapper ">
 		<div class="header__content ">
 			<div class="header__top _container">
-					<a class="logo" href="#">
+					<a class="logo" href="./index.html">
 						<img src="img/logo.png" alt="logo">
 						<div class="logo__text"><span>Электрик</span><br>Надежно. Безопасно</div>
 					</a>
 					<nav class="menu__body">
 						<ul class="header__links">
-							<li><a href="#" class="header__link">О нас</a></li>
+							<li><a href="./aboutUs.html" class="header__link">О нас</a></li>
 							<li><a href="#" class="header__link">Услуги</a></li>
-							<li><a href="#" class="header__link">Юридическим лицам</a></li>
-							<li><a href="#" class="header__link">Рассрочка</a></li>
-							<li><a href="#" class="header__link">Контакты</a></li>
+							<li><a href="./price.html" class="header__link">Цены на услуги</a></li>
+							<li><a href="./installment.html" class="header__link">Рассрочка</a></li>
+							<li><a href="./contacts.html" class="header__link">Контакты</a></li>
 						</ul>
 					</nav>
 					<div class="menu__icon icon-menu">
