--- a/#src/_callBlock.html
+++ b/#src/_callBlock.html
@@ -1,7 +1,7 @@
 <div class="call-block__wrapper">
 	<div class="call-block _container">
-		<h2>Уточните детали и закажите выезд электрика
-		<span>8 (905) 777-2030</span></h2>
+		<h2>Уточните детали и закажите выезд электрика <a href="tel:89057772030" class="bottom__item">8 (905) 777-2030</a>
+		</h2>
 		<div class="btn-link">
 			<a href="#" class="glow-button">Позвонить</a>
 		</div>
