--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -13,9 +13,9 @@
 				<div class="footer__text">
 					Н.Тагил и область<br>
 					Работаем круглосуточно:
-				<a href="tel:89057772030" class="header__item  _icon-tell"> 8 (905) 777-2030</a>
+				<a href="tel:89057772030" class="bottom__item  _icon-tell"> 8 (905) 777-2030</a>
 					<br>Почта для заявок:
-					<a href="mailto:info@electrik.ru" class="header__item _icon-mail">info@electrik.ru</a>
+					<a href="mailto:info@electrik.ru" class="bottom__item _icon-mail">info@electrik.ru</a>
 				</div>
 			</div>
 			<div class="footer__item">
