--- a/#src/_header.html
+++ b/#src/_header.html
@@ -2,32 +2,46 @@
 	<div class="header__wrapper ">
 		<div class="header__content ">
 			<div class="header__top _container">
-					<a class="logo" href="./index.html">
-						<img src="img/logo.png" alt="logo">
-						<div class="logo__text"><span>Электрик</span><br>Надежно. Безопасно</div>
-					</a>
-					<nav class="menu__body">
-						<ul class="header__links">
-							<li><a href="./aboutUs.html" class="header__link">О нас</a></li>
-							<li><a href="#" class="header__link">Услуги</a></li>
-							<li><a href="./price.html" class="header__link">Цены на услуги</a></li>
-							<li><a href="./installment.html" class="header__link">Рассрочка</a></li>
-							<li><a href="./contacts.html" class="header__link">Контакты</a></li>
-						</ul>
-					</nav>
-					<div class="menu__icon icon-menu">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>			
+				<a class="logo" href="./index.html">
+					<img src="img/logo.png" alt="logo">
+					<div class="logo__text"><span>Электрик</span><br>Надежно. Безопасно</div>
+				</a>
+				
+				<nav class="menu__body">
+					<ul class="header__links">
+						<div class="yy"  id="ii"></div>
+						<li><a href="./aboutUs.html" class="header__link demo">О нас</a></li>
+						<li><a href="#" class="header__link sevises-link" id="lin">Услуги</a>
+									<ul class="sub__links">
+									<li><a href="./automaticSwitch.html" class="sub__link">Автоматы, выключатели</a></li>
+									<li><a href="./emergencyWork.html" class="sub__link">Аварийные срочные работы</a></li>
+									<li><a href="./mounting.html" class="sub__link">Монтаж электропроводки</a></li>
+									<li><a href="./lighting.html" class="sub__link">Освещение и подсветка</a></li>
+									<li><a href="./connectingElectrical.html" class="sub__link">Подключение элекроприборов</a></li>
+									<li><a href="./lowCurrentSystem.html" class="sub__link">Слаботочные системы</a></li>
+									</ul></li>
+									
+						<li><a href="./price.html" class="header__link">Цены на услуги</a></li>
+						<li><a href="./installment.html" class="header__link">Рассрочка</a></li>
+						<li><a href="./contacts.html" class="header__link">Контакты</a></li>
+					</ul>
+				</nav>
+			
+				<div class="menu__icon icon-menu">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
 			</div>
 		</div>
-		<div class="bottom__wrapper">
-		<div class="header__bottom _container">
-			<a href="tel:89057772030" class="header__item  _icon-tell"> 8 (905) 777-2030</a>
-			<a href="mailto:info@electrik.ru" class="header__item _icon-mail">info@electrik.ru</a>
-			<div class="header__item _icon-location">Н.Тагил и область</div>
+		<div class="bottom">
+			<div class="bottom__wrapper _container">
+				<a href="tel:89057772030" class="bottom__item  _icon-tell"> 8 (905) 777-2030</a>
+				<a href="mailto:info@electrik.ru" class="bottom__item _icon-mail">info@electrik.ru</a>
+				<div class="bottom__item _icon-location">Н.Тагил и область</div>
+			</div>
 		</div>
-		</div>
+
+	</div>
 	</div>
 </header>
