--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -19,6 +19,7 @@
 				</div>
 			</div>
 			<div class="footer__item">
+				<button onclick="topFunction()" id="myBtn" title="Go to top"></button>
 				<h3>Наши направления</h3>
 				<ul class="footer__links">
 					<li><a href="./automaticSwitch.html" class="footer__link">Автоматы, выключатели</a></li>
