--- a/#src/_header.html
+++ b/#src/_header.html
@@ -9,8 +9,7 @@
 				
 				<nav class="menu__body">
 					<ul class="header__links">
-						<div class="yy"  id="ii"></div>
-						<li><a href="./aboutUs.html" class="header__link demo">О нас</a></li>
+						<li><a href="./aboutUs.html" class="header__link">О нас</a></li>
 						<li><a href="#" class="header__link sevises-link" id="lin">Услуги</a>
 									<ul class="sub__links">
 									<li><a href="./automaticSwitch.html" class="sub__link">Автоматы, выключатели</a></li>
