--- a/#src/index.html
+++ b/#src/index.html
@@ -55,7 +55,7 @@
 							<li>Ремонтные работы</li>
 						</ul>
 						<div class="btn-link">
-						<a href="#" class="glow-button">Позвонить</a>
+						<a href="tel:89057772030" class="glow-button">Позвонить</a>
 						<a href="./automaticSwitch.html" class="services__item-link">Подробнее</a>
 						</div>
 					</div>
@@ -68,7 +68,7 @@
 							<li>Аварийные работы</li>
 						</ul>
 						<div class="btn-link">
-							<a href="#" class="glow-button">Позвонить</a>
+							<a href="tel:89057772030" class="glow-button">Позвонить</a>
 							<a href="./emergencyWork.html" class="services__item-link">Подробнее</a>
 							</div>
 					</div>
@@ -81,7 +81,7 @@
 							<li>Монтаж электрики "под ключ"</li>
 						</ul>
 						<div class="btn-link">
-							<a href="#" class="glow-button">Позвонить</a>
+							<a href="tel:89057772030" class="glow-button">Позвонить</a>
 							<a href="./mounting.html" class="services__item-link">Подробнее</a>
 							</div>
 					</div>
@@ -94,7 +94,7 @@
 							<li>Установка подсветки</li>
 						</ul>
 						<div class="btn-link">
-							<a href="#" class="glow-button">Позвонить</a>
+							<a href="tel:89057772030" class="glow-button">Позвонить</a>
 							<a href="./lighting.html" class="services__item-link">Подробнее</a>
 							</div>
 					</div>
@@ -107,7 +107,7 @@
 							<li>Подключение техники</li>
 						</ul>
 						<div class="btn-link">
-							<a href="#" class="glow-button">Позвонить</a>
+							<a href="tel:89057772030" class="glow-button">Позвонить</a>
 							<a href="./connectingElectrical.html" class="services__item-link">Подробнее</a>
 							</div>
 					</div>
@@ -120,7 +120,7 @@
 							<li>Слаботочные подсветки</li>
 						</ul>
 						<div class="btn-link">
-							<a href="#" class="glow-button">Позвонить</a>
+							<a href="tel:89057772030" class="glow-button">Позвонить</a>
 							<a href="./lowCurrentSystem.html" class="services__item-link">Подробнее</a>
 							</div>
 					</div>
