--- a/#src/_callBlock.html
+++ b/#src/_callBlock.html
@@ -3,7 +3,7 @@
 		<h2>Уточните детали и закажите выезд электрика <a href="tel:89057772030" class="bottom__item">8 (905) 777-2030</a>
 		</h2>
 		<div class="btn-link">
-			<a href="#" class="glow-button">Позвонить</a>
+			<a href="tel:89057772030" class="glow-button">Позвонить</a>
 		</div>
 	</div>
 </div>
