--- a/#src/mounting.html
+++ b/#src/mounting.html
@@ -3,7 +3,6 @@
 @@include('_head.html',{
 "title":"Главная"
 })
-
 <body>
 	<div class="wrapper">
 		@@include('_header.html',{})
@@ -18,21 +17,20 @@
 					<h2>Когда необходима замена проводки</h2>
 					<div class="aboutUs__text">
 						Наиболее популярные причины замены электропроводки заключаются в:
-<br><br>
+						<br><br>
 						частых замыканиях в электроцепи и скачки напряжения, что может спровоцировать пожар из-за возгорания
 						проводки;
 						недостаточном количестве сечений кабеля для безопасного подключения бытовой техники и других
 						энергопотребителей;
 						изначально недобросовестном монтаже электропроводки при строительстве дома или во время ремонта
 						помещений.
-						<br><br>	Полный монтаж проводки требуется чаще всего в новых домах, сооружениях или помещениях.
+						<br><br> Полный монтаж проводки требуется чаще всего в новых домах, сооружениях или помещениях.
 					</div>
 					<h2>Как проходит монтаж или замена проводки</h2>
 					<div class="aboutUs__text">
 						Все работы с электропроводкой выполняют квалифицированные электрики. При оказании услуг они строго
 						соблюдают требования ПУЭ, строительных норм и стандартов. Используют специальный инструмент,
 						оборудование и расходные материалы.
-
 						<br><br>
 						Специалисты компании «Электрик» выполняют все работы по монтажу внешней и внутренней проводки в
 						жилых и коммерческих помещениях под ключ
@@ -40,7 +38,6 @@
 						Мы проводим не только электрическую проводку, но и кабели слаботочных систем: интернет, телефон,
 						телевидение, видеонаблюдение и т. д.
 					</div>
-
 					<h2>От чего зависит цена</h2>
 					<div class="aboutUs__text">
 						Стоимость услуги по монтажу или замене электропроводки зависит от нескольких факторов:
@@ -50,13 +47,12 @@
 						Объем работ: длина кабеля, кол-во выключателей, розеток, необходимость подключения автоматов,
 						счетчиков и др.
 						Материал стен. От этого параметра будет зависеть сложность демонтажа старой и монтажа новой проводки.
-						<br><br>Узнайте стоимость замены вашей проводки или оставьте заявку на удобное время. Звоните прямо сейчас.
+						<br><br>Узнайте стоимость замены вашей проводки или оставьте заявку на удобное время. Звоните прямо
+						сейчас.
 						Проконсультируем вас, ответим на вопросы и отправим специалиста.
 					</div>
-
 				</div>
 			</div>
-
 			@@include('_callBlock.html',{})
 		</main>
 		@@include('_footer.html',{})
@@ -64,5 +60,4 @@
 	@@include('_popup.html',{})
 	@@include('_js.html',{})
 </body>
-
 </html>
